--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6",
-    "react-native-success-animation": "^1.0.2"
+    "react-native": "0.71.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-success-animation": "^1.0.2"
   },
   "private": true
 }
